--- a/app/index.html
+++ b/app/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><body><div class="header">dsagfdsg</div><script src="js/libs.min.js"></script><script src="js/main.js"></script></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Flows</title><link rel="stylesheet" href="css/libs.min.css"><link rel="stylesheet" href="css/style.min.css"></head><body></body><script src="js/libs.min.js"></script><script src="js/main.js"></script></html>
